--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
         "checkJs": false,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
-        "module": "commonjs",
-        "moduleResolution": "node",
+        "module": "ES2022",
+        "moduleResolution": "bundler",
         "newLine": "LF",
         "noEmitOnError": true,
         "noErrorTruncation": true,
